# md-replay

./: .gitignore  Cargo.toml  Charlie_Robinson_CV_beautiful.html  Charlie_Robinson_CV_md_replay.md  README.md
.github/workflows/: ci.yml
configs/: ticks.toml
crates/cli/: Cargo.toml
crates/cli/src/: gui.rs  main.rs
crates/cli/src/ui/: index.html
crates/cli/tests/: pipeline.rs
crates/clients/: Cargo.toml
crates/clients/src/: feature.rs  lib.rs  printer.rs  verify.rs
crates/core/: Cargo.toml
crates/core/src/: event.rs  lib.rs  tick.rs
crates/ingest/: Cargo.toml  build.rs
crates/ingest/src/: csv.rs  gen_pcap.rs  itch.rs  lib.rs  pcap_ingest.rs  pcap_stub.rs  yahoo.rs
crates/replay/: Cargo.toml  build.rs
crates/replay/proto/: replay.proto
crates/replay/src/: engine.rs  grpc.rs  lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: eventlog.rs  index.rs  lib.rs
data/: norm.eventlog  norm.eventlog.idx  real.eventlog  real.eventlog.idx  sample.pcap  sample_csv_a.csv  sample_csv_b.csv  sample_csv_c.csv  verify.out
scripts/: demo.ps1  gui.ps1  serve.ps1  stream.ps1
tests/: README.md
