[workspace]
members = [
  "crates/core",
  "crates/ingest",
  "crates/storage",
  "crates/replay",
  "crates/clients",
  "crates/cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
bincode = "1.3"
bytes = "1.6"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.4"
csv = "1.3"
futures = "0.3"
pcap = "2.2"
prost = "0.13"
proptest = "1.5"
rand = "0.8"
rand_chacha = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = { version = "1.36", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "time", "sync", "net"] }
tokio-stream = "0.1"
toml = "0.8"
tonic = { version = "0.12", features = ["transport"] }
tonic-build = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
protoc-bin-vendored = "3.1"
tempfile = "3.12"
axum = "0.7"
