[package]
name = "md-replay"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
pcap = ["md-ingest/pcap"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
md-clients = { path = "../clients" }
md-core = { path = "../core" }
md-ingest = { path = "../ingest" }
md-replay-engine = { path = "../replay" }
md-storage = { path = "../storage" }
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
rust_decimal.workspace = true
tempfile.workspace = true
