[package]
name = "md-clients"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
md-core = { path = "../core" }
md-replay-engine = { path = "../replay" }
md-storage = { path = "../storage" }
rand.workspace = true
rand_chacha.workspace = true
thiserror.workspace = true

